# daily-sentence

./: .gitignore  Procfile  README.md  pyproject.toml
src/daily_sentence/: chatgpt_utils.py  language.py  main.py  translation_api.py
src/daily_sentence/pages/: __init__.py  app.py  base_page.py  daily_practice_page.py  index.py  navigation.py  settings_page.py  vocabulary_page.py
