[project]
name = "daily-sentence"
version = "0.1.0"
description = ""
authors = [
    {name = "k3",email = "buoren@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nicegui (>=1.3.0) ; python_version >= \"3.7\" and python_version < \"4.0\"",
    "openai (>=1.69.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "daily_sentence", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
